src/test/deca/extension/context/invalid/wrong_return_type.deca
// Wrong return type for delta (int != int[])

class retur {
    int[] a ;
    int delta (){
        return a;
    }
    void setA(int b){
        a[0] = b;
    }
}

{
    retur e = new retur();
    e.setA(1);
    println(e.delta()[1]);
}